--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -37,6 +37,7 @@ Enhancements
 * Improved device registration to be able to create profiles, this allow you to associate device registration profile by connection profile
 * Allow to specify the format of the username that is being sent in firewall SSO (PR #2499)
 * Monitor SSL certificates expiration and alert if they are expired (PR #2444)
+* Content Security Policy (CSP) enforced through the browser for Admin and Portal interfaces. Can be disabled through Advanced System Configuration. (PR #2336)
 
 Bug Fixes
 +++++++++
