--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -53,6 +53,7 @@ Bug Fixes
 * Fixes violation definition sync when removing a violation from the config
 * Fixes incorrect Connection-Type when using EAP-TTLS (#2582)
 * Fix voip logic to reduce the chance of duplicate locationlog entries (#2527)
+* Fixed SNMP connection issues on Extricom controllers
 
 Version 7.2.0 released on 2017-07-10
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
