--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -54,6 +54,7 @@ Bug Fixes
 * Fixes incorrect Connection-Type when using EAP-TTLS (#2582)
 * Fix voip logic to reduce the chance of duplicate locationlog entries (#2527)
 * Fixed SNMP connection issues on Extricom controllers
+* Fixes segfaults when logging in the multithread environments (#2603)
 
 Version 7.2.0 released on 2017-07-10
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
