--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+packetfence (7.3.0) unstable; urgency=low
+
+  * Version 7.3.0
+
+ -- Inverse <info@inverse.ca>  Mon, 25 Sep 2017 12:00:00 -0400
+
 packetfence (7.2.0) unstable; urgency=low
 
   * Version 7.2.0
