--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -108,6 +108,12 @@ Once the additionnal steps below are completed, restart packetfence-config and p
 Don't forget to edit the `/usr/local/pf/conf/currently-at` file to match the newly updated version
 
   cat /usr/local/pf/conf/pf-release > /usr/local/pf/conf/currently-at
+
+
+Upgrading from a version prior to X.Y.Z
+---------------------------------------
+
+Once completed, update the file /usr/local/pf/conf/currently-at to match the new release number (PacketFence X.Y.Z).
   
 
 Upgrading from a version prior to 7.3.0
